fix: Prevent content shifting after image icon is loaded

--- a/themes/pure/assets/css/notablog.css
+++ b/themes/pure/assets/css/notablog.css
@@ -275,5 +275,7 @@
 
 .inline-img-icon {
   height: 1.2em;
+  /* Setting width prevents content shifting after image loaded. */
+  width: 1.2em;
   vertical-align: sub;
 }
